# sdk

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  REUSE.toml  build.rs  renovate.json  rustfmt.toml
.github/workflows/: release.yml
src/: auth.rs  constant.rs  error.rs  ffi.rs  http.rs  hwid.rs  lib.rs  state.rs
