# SPDX-FileCopyrightText: 2026 BasedAuth
# SPDX-License-Identifier: Apache-2.0

[package]
name = "basedauth"
version = "1.0.0"
authors = ["cadavricator"]
description = "Official SDK for the BasedAuth authentication service."
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true

[dependencies]
blake3 = "1.8.4"
dryoc = "0.7.2"
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Dxgi"] }

[build-dependencies]
cbindgen = "0.29.2"
